fix cut of page title on mobile view

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -27,6 +27,15 @@ video {
   display: inline-block;
   max-width: 100%;
 }
+article {
+  padding: 30px 30px !important;
+}
+@media (min-width: 768px) {
+  article {
+    padding: 0px 30px !important;
+  }
+}
+
 audio:not([controls]) {
   display: none;
   height: 0;
@@ -40,7 +49,7 @@ template {
 }
 a {
   /* color: rgb(67, 132, 245); */
-  color: #4284F5;
+  color: #4284f5;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
@@ -48,7 +57,7 @@ a {
 a:active,
 a:hover {
   /* color: rgb(112, 165, 255); */
-  color: #4284F5;
+  color: #4284f5;
   text-decoration: underline;
   outline-width: 0;
 }
@@ -429,7 +438,6 @@ table {
   display: block;
   overflow-x: auto;
 }
-
 
 fieldset {
   margin-left: 0;
